tests/workflows/tests/snapshots/plugin__plugin_list_json_one_installed_plugin.snap
---
source: tests/workflows/tests/plugin.rs
expression: envelope
---
{
  "success": true,
  "plugins": [
    {
      "name": "biome",
      "kind": "plugin",
      "installed": [],
      "current": "not installed",
      "latest": "2.5.5",
      "status": "not installed",
      "outdated": false,
      "update_supported": true,
      "error": null
    },
    {
      "name": "oxlint",
      "kind": "plugin",
      "installed": [
        "1.57.0"
      ],
      "current": "1.57.0",
      "latest": "1.75.0",
      "status": "update available",
      "outdated": true,
      "update_supported": true,
      "error": null
    },
    {
      "name": "rolldown",
      "kind": "plugin",
      "installed": [],
      "current": "not installed",
      "latest": "1.2.0",
      "status": "not installed",
      "outdated": false,
      "update_supported": true,
      "error": null
    }
  ],
  "count": 3
}
