tests/workflows/tests/snapshots/plugin__plugin_outdated_json_managed_tools.snap
---
source: tests/workflows/tests/plugin.rs
expression: envelope
---
{
  "success": true,
  "plugins": [
    {
      "name": "biome",
      "kind": "plugin",
      "installed": [],
      "current": "2.5.1",
      "latest": "2.5.2",
      "status": "update available",
      "outdated": true,
      "update_supported": true,
      "error": null
    },
    {
      "name": "oxlint",
      "kind": "plugin",
      "installed": [],
      "current": "1.71.0",
      "latest": "1.72.0",
      "status": "update available",
      "outdated": true,
      "update_supported": true,
      "error": null
    },
    {
      "name": "rolldown",
      "kind": "plugin",
      "installed": [],
      "current": "1.1.3",
      "latest": "1.1.4",
      "status": "update available",
      "outdated": true,
      "update_supported": true,
      "error": null
    }
  ],
  "project_owned": [
    {
      "name": "tsdown",
      "kind": "project",
      "update_supported": false,
      "note": "project dependency; use lpm outdated or lpm upgrade"
    }
  ],
  "outdated_count": 3,
  "count": 3
}
