tests/workflows/tests/snapshots/plugin__plugin_update_json_zero_installed_plugins.snap
---
source: tests/workflows/tests/plugin.rs
assertion_line: 82
expression: envelope
---
{
  "success": true,
  "updated": [],
  "count": 0
}
